<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="google_maps_key">AIzaSyDGBWQKBBKloFJfQgY_5i-l-a7aT8oRWhw</string>
    <string name="file_provider" translatable="false">${applicationId}.fileprovider</string>
    <string name="chip_ellipsis">&#8230;</string>
    <string name="app_name">Belco Wallet</string>
    <string name="bottom_menu_locations">Locations</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_wallet">Wallet</string>
    <string name="bottom_menu_deals">Deals</string>
    <string name="base_screen_no_internet_title">No internet connection</string>
    <string name="base_screen_no_internet_description">Connect to WiFi or turn on mobile data.</string>
    <string name="base_screen_server_error_title">Server error</string>
    <string name="base_screen_server_error_description">Our server goes down. Please, try again later.</string>
    <string name="base_screen_something_wrong_title">Something wrong</string>
    <string name="base_screen_something_wrong_description">Our app runs into an issue. Please, try again later.</string>
    <string name="logo_text">Stay Ahead of the Crypto Future</string>
    <string name="pin_code_screen_enter_pin">Enter PIN</string>
    <string name="pin_code_screen_old_pin">Enter old PIN</string>
    <string name="pin_code_screen_new_pin">Enter new PIN</string>
    <string name="pin_code_screen_new_pin_confirm">Confirm new PIN</string>
    <string name="pin_code_screen_bio_title">Scan to access</string>
    <string name="pin_code_screen_bio_cancel">Enter PIN</string>
    <string name="code_created">Code created successfully</string>
    <string name="code_changed">Code changed successfully</string>
    <string name="pin_code_do_not_match">PINS don\'t match. Please try again</string>
    <string name="setup_pin_code">Setup new PIN</string>
    <string name="sms_code_screen_title">Verify phone</string>
    <string name="sms_code_screen_description">Enter the 4-digit code we sent you\nvia SMS to continue</string>
    <string name="sms_code_screen_did_not_get_the_code">Didn\'t get the code? </string>
    <string name="sms_code_screen_resend_code">Resend code</string>
    <string name="sms_code_screen_invalid_code">Wrong code</string>
    <string name="sms_code_screen_resend">New code was sent</string>
    <string name="welcome_screen_please_accept_tnc">Please, accept our Terms &amp; Conditions</string>
    <string name="welcome_screen_contact_support">Contact support</string>
    <string name="welcome_screen_create_new_wallet">Create new Wallet</string>
    <string name="welcome_screen_recover_old_wallet">Recover old Wallet</string>
    <string name="welcome_screen_accept_terms_and_conditions">Accept Terms &amp; Conditions</string>
    <string name="welcome_screen_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="welcome_screen_all_assets_in_one_place">All assets in one place</string>
    <string name="welcome_screen_private_and_secure">Private and secure</string>
    <string name="welcome_screen_buy_sell_and_trade_assets">Buy, sell and trade assets</string>
    <string name="welcome_screen_support_title" tools:ignore="TypographyDashes">+1 (888) 776-6969\nsupport@belcobtm.com</string>
    <string name="welcome_screen_support_call">Call</string>
    <string name="welcome_screen_support_send_email">Send Email</string>
    <string name="welcome_screen_support_phone" tools:ignore="TypographyDashes">+1 (888) 776-6969</string>
    <string name="welcome_screen_support_email">support@belcobtm.com</string>
    <string name="balance_screen_empty_balance">$…</string>
    <string name="balance_screen_manage_wallets">Manage wallets</string>
    <string name="recover_wallet_screen_title">Recover old wallet</string>
    <string name="recover_wallet_phone">Phone</string>
    <string name="recover_wallet_password">Password</string>
    <string name="recover_wallet_incorrect_login">Phone doesn\'t exist</string>
    <string name="recover_wallet_incorrect_password">Incorrect password</string>
    <string name="recover_wallet_password_min_max_length">Password must be between 6 and 20 characters</string>
    <string name="recover_wallet_error_all_fields_required">All fields are required</string>
    <string name="verify_sms_code">Enter SMS code</string>
    <string name="phone_number">201-555-0123</string>
    <string name="create_wallet_screen_title">Create new wallet</string>
    <string name="create_wallet_screen_phone">Phone</string>
    <string name="create_wallet_screen_password">Password</string>
    <string name="create_wallet_screen_confirm_password">Confirm password</string>
    <string name="create_wallet_error_all_fields_required">All fields are required</string>
    <string name="create_wallet_error_confirm_pass">Passwords do not match</string>
    <string name="error_short_pin">PIN should contain 6 digits</string>
    <string name="error_confirm_pin">PIN do not match</string>
    <string name="create_wallet_error_short_pass">Password length should be from 6 to 15</string>
    <string name="error_sms_code_4_digits">Code should have 4 digits</string>
    <string name="create_wallet_error_invalid_phone_number">Invalid phone number</string>
    <string name="sms_code">SMS code</string>
    <string name="create_wallet_error_phone_registered">Phone is already registered</string>
    <string name="seed_phrase">Seed Phrase</string>
    <string name="seed_info">If you lost your seed phrase you would not be able to recover your wallet</string>
    <string name="seed_clipboard">Seed phrase copied to clipboard</string>
    <string name="seed_phrase_screen_copy">Copy</string>
    <string name="seed_phrase_screen_done">Done</string>
    <string name="seed_pharse_paste_error_message">Seed phrase should contain 12 words separated by space. Please rechecked seed phrase and paste it again</string>
    <string name="show_seed_screen_title">Show seed phrase</string>
    <string name="show_seed_screen_description">If you lost your seed phrase you would not be able to recover your wallet</string>
    <string name="recover_seed_screen_title">Recover seed phrase</string>
    <string name="recover_seed_screen_description">Enter your secret 12-word phrase\nhere to restore your wallet</string>
    <string name="recover_seed_screen_error_length">Seed phrase must be 12 words</string>
    <string name="recover_seed_screen_incorrect_phrase">Seed phrase you entered is invalid. Please try again</string>
    <string name="create_seed_screen_title">Create seed phrase</string>
    <string name="create_seed_screen_description">Create a new seed phrase or use your own. In case you lost seed phrase you will not be able to recover your wallet</string>
    <string name="create_seed_screen_seed_phrase_copied">Seed phrase copied</string>
    <string name="balance_screen_title_screen">Total</string>
    <string name="balance_screen_balance">$ %1$s</string>
    <string name="atm">ATM</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="wallets_screen_title">Wallets</string>
    <string name="open_now">Open now:</string>
    <string name="settings_phone">Phone</string>
    <string name="settings_pin">Change PIN</string>
    <string name="settings_verification">Verification</string>
    <string name="settings_unlink">Unlink wallet</string>
    <string name="unlink_warning">Unlink the wallet from the current device means clear all local data(seed phrase, public and private keys). You can recover the wallet any time and on any device using your credentials and seed phrase.\n\n</string>
    <string name="unlink_warning2">Please, make sure you have been stored your credentials and seed phrase before unlinking the wallet.</string>
    <string name="change_phone">Change Phone</string>
    <string name="open_seed">Enter Password</string>
    <string name="change">Change</string>
    <string name="new_phone_number">New phone number</string>
    <string name="change_password">Change password</string>
    <string name="new_pass">New Password *</string>
    <string name="old_pass">Old Password *</string>
    <string name="confirm_new_pass"> Confirm new password *</string>
    <string name="change_pin">Change PIN</string>
    <string name="new_pin">New PIN *</string>
    <string name="old_pin">Old PIN *</string>
    <string name="confirm_new_pin"> Confirm new PIN *</string>
    <string name="pin_changed">PIN changed</string>
    <string name="error_wrong_old_pin">Wrong old PIN</string>
    <string name="verification_screen_title">Verification</string>
    <string name="verification_status">Status</string>
    <string name="verification_tx_limit">Transaction limit</string>
    <string name="verification_daily_limit">Daily limit</string>
    <string name="verification_vip_verify">VIP verify</string>
    <string name="verification_verify">Verify</string>
    <string-array name="verification_status_array">
        <item>Incorrect status</item>
        <item>Not verified</item>
        <item>Verification pending</item>
        <item>Verification rejected</item>
        <item>Verified</item>
        <item>VIP verification pending</item>
        <item>VIP verification rejected</item>
        <item>VIP verified</item>
    </string-array>
    <string name="verification_select">Select</string>
    <string name="verification_remove">Remove</string>
    <string name="verification_id_number">ID Number</string>
    <string name="verification_first_name">First Name</string>
    <string name="verification_last_name">Last Name</string>
    <string name="verification_address">Address</string>
    <string name="verification_city">City</string>
    <string name="verification_country">Country</string>
    <string name="verification_province">Province</string>
    <string name="verification_zip_code">ZIP code</string>
    <string name="verification_send">Send</string>
    <string name="verification_select_photo_please">Select photo please</string>
    <string name="verification_alert_country_title">Please pick country</string>
    <string name="verification_alert_state_title">Please pick province</string>
    <string name="verification_alert_city_title">Please pick city</string>
    <string name="verification_alert_please_fill_fields">Please fill all fields</string>
    <string name="verification_id_scan">ID scan</string>
    <string name="verification_id_selfie">ID selfie</string>
    <string name="verification_snn">SNN</string>
    <string name="cancel">Cancel</string>
    <string name="terms_label">Terms &amp; Conditions</string>
    <string name="privacy_label">Privacy Policy</string>
    <string name="comlaint_label">Complaint Policy</string>
    <string name="version_label">Version</string>
    <string name="update_phone_label">Update phone</string>
    <string name="update_pass_label">Update password</string>
    <string name="update_pin_label">Update PIN</string>
    <string name="seed_phrase_label">Seed phrase</string>
    <string name="unlink_wallet_label">Unlink</string>
    <string name="support_phone_label">Phone</string>
    <string name="support_email_label">Email</string>
    <string name="support_telegram_label">Telegram</string>
    <string name="support_whatapp_label">WhatsApp</string>
    <string name="support_phone">+18888483033</string>
    <string name="support_email">support@belcobtm.com</string>
    <string name="support_telegram">\@BelcoBTM</string>
    <string name="support_whatapp">HLM8HlzE5VjDjhEiZJpKJr</string>
    <string name="old_pass_hint">Old password</string>
    <string name="new_pass_hint">New password</string>
    <string name="new_pass_confirm_hint">Confirm new password</string>
    <string name="update_pass_action">Update</string>
    <string name="deals_staking">Staking</string>
    <string name="deals_swap">Swap</string>
    <string name="deals_trade">P2P Trade</string>
</resources>