<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/updatePhoneItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_phone_waves"
        app:text="@string/update_phone_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/updatePassItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_lock"
        app:text="@string/update_pass_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/updatePinItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_key"
        app:text="@string/update_pin_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/seedPhraseItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_seed"
        app:text="@string/seed_phrase_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/unlinkItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_unlink"
        app:text="@string/unlink_wallet_label" />

</androidx.appcompat.widget.LinearLayoutCompat>