<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/ic_logo_main"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/privacy_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_quarter"
        android:paddingBottom="@dimen/margin_quarter"
        app:text="@string/privacy_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/complaint_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_quarter"
        android:paddingBottom="@dimen/margin_quarter"
        app:text="@string/comlaint_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/terms_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_quarter"
        android:paddingBottom="@dimen/margin_quarter"
        app:text="@string/terms_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/thin_divider" />

    <com.app.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/version_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_quarter"
        android:paddingBottom="@dimen/margin_quarter"
        app:text="@string/version_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:background="@color/thin_divider" />

</androidx.appcompat.widget.LinearLayoutCompat>