<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordContainerView"
        style="@style/TextInputLayoutOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginEnd="@dimen/margin_main"
        android:layout_marginTop="@dimen/margin_main"
        android:hint="@string/old_pass_hint"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/oldPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordContainerView"
        style="@style/TextInputLayoutOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginEnd="@dimen/margin_main"
        android:layout_marginTop="@dimen/margin_main"
        android:hint="@string/new_pass_hint"
        app:errorEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordContainerView">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/newPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordConfirmContainerView"
        style="@style/TextInputLayoutOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginEnd="@dimen/margin_main"
        android:layout_marginTop="@dimen/margin_main"
        android:hint="@string/new_pass_confirm_hint"
        app:layout_constraintTop_toBottomOf="@id/newPasswordContainerView">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/newPasswordConfirmView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main"
        android:text="@string/update_pass_action"
        app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmContainerView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>