<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.settings.UnlinkActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/settings_unlink" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_x3"
        android:layout_marginTop="@dimen/margin_x3"
        android:layout_marginEnd="@dimen/margin_x3"
        android:gravity="center_horizontal"
        android:text="@string/unlink_warning"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_x3"
        android:layout_marginEnd="@dimen/margin_x3"
        android:layout_marginBottom="@dimen/margin_x4"
        android:gravity="center_horizontal"
        android:text="@string/unlink_warning2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/unlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_x4"
        android:layout_marginEnd="@dimen/margin_x4"
        android:background="@drawable/bt_gray_rounded_corner"
        android:backgroundTint="@color/blue_color"
        android:text="Unlink"
        android:textColor="@android:color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>